@@ -44,6 +44,7 @@ Version 0.6.0~dev
 	* Add qt-faststart worker.
 	* Add flvtool2 worker.
 	* Support hinting option for flv, mp4 and mov containers.
+	* Rename mpeg2_transcode action to transmux.
 
 Version 0.5.0 Released on 2012/03/29
 
